--- a/csv.ipynb
+++ b/csv.ipynb
@@ -1392,7 +1392,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = {\"Sn\":[1,2],'Ram': [9789789798987, 87687967867], 'Shyam': [8686986978, 78687]}\n",
+    "df = pd.DataFrame(a)\n",
+    "df.to_csv('datas.json')\n",
+    "df\n",
+    "a = {\"Sn\":[1,2],'Ram': [9789789798987, 87687967867], 'Shyam': [8686986978, 78687]}\n",
+    "df = pd.DataFrame(a)\n",
+    "df.to_csv('datas.json')\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
